# opengl_demo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  WORKFLOW.md  opengl_demo.py
.cache/clangd/index/: Material.cpp.786588E7BDBE2D30.idx  Material.h.C51F9F0A17580E95.idx  Mesh.h.01C1C05ADCF4C749.idx  ModelLoader.cpp.0E54B029D147898F.idx  ModelLoader.h.FD623ED6D9F80B93.idx  Shader.cpp.6B0CCE34F64E307D.idx  Shader.h.B525BB924FCB6F2F.idx  Texture.cpp.BA0E307777DCC09F.idx  Texture.h.CB3C356FDA13D164.idx  Vertex.h.233B52360CA149D0.idx  _fixes.hpp.85D9C6B8BC8C8CA6.idx  _vectorize.hpp.71082369FD6F2663.idx  common.hpp.A551AAE959004D33.idx  compute_common.hpp.8A2E365535A6EC68.idx  compute_vector_relational.hpp.3477827227E1D978.idx  constants.hpp.D64C9A3D9DEA38E0.idx  constants.inl.E3D3B91670DFBA10.idx  epsilon.hpp.F43CC609A2D86D6C.idx  epsilon.inl.6ECD5F06E52473A6.idx  exponential.hpp.285DE3453BB91A81.idx  func_common.inl.D2FA1A61610E444E.idx  func_exponential.inl.D8E2F8C75D1D9D1C.idx  func_geometric.inl.2D6C46D4AC05B7B5.idx  func_integer.inl.7FC499564A14BA93.idx  func_matrix.inl.DB889DD96B11127B.idx  func_packing.inl.B79B70770840CC24.idx  func_trigonometric.inl.2761792EB2A75478.idx  func_vector_relational.inl.62BBC41DCEBC55A3.idx  fwd.hpp.C1EB89EBB9F146F9.idx  geometric.hpp.574304530A6DC524.idx  glad.h.426975668BA6F924.idx  glfw3.h.C53DEC8A7441D849.idx  glm.hpp.0A3D8A9C1EBE315A.idx  integer.hpp.2106F637CE986077.idx  khrplatform.h.A27D659A5F5B6127.idx  main.cpp.635D98875C807B03.idx  mat2x2.hpp.4DAC6435AF799453.idx  mat2x3.hpp.FB4676495FE25DFB.idx  mat2x4.hpp.201A759A297C7175.idx  mat3x2.hpp.8479FB8B605A8075.idx  (+156 more)
cmake/: Dependencies.cmake  Platform.cmake  Testing.cmake
doc/: README.md  architecture.md  changelog.md  code-review-2026-02-20.md  core-classes.md  progress.md  testing.md  todo.md
doc/api/: Application.md  CMesh.md  CShader.md  Camera.md  MeshUtils.md  ModelLoader.md  Texture.md
doc/examples/: basic-triangle.md
doc/examples/basic-triangle/: CMakeLists.txt  README.md
doc/tutorial/: getting-started.md  materials-textures.md  model-loading.md
docs/: TEAM_WORKFLOW.md
docs/api/: Lighting.md
docs/requirements/: INDEX.md  REQ-001-010.md  REQ-001-Lighting.md  TEMPLATE.md
docs/requirements/active/: REQ-002-keyboard-control.md  REQ-003-mouse-control.md  REQ-006-ground-plane.md  REQ-007-different-textures.md  REQ-009-pause-feature.md  REQ-010-reset-feature.md  REQ-011-test-coverage.md  REQ-012-geometry-shapes.md  REQ-013-scene-geometry.md  REQ-014-display-mode.md  REQ-015-readme-controls.md  REQ-016-light-visual.md
docs/requirements/completed/: REQ-001-fix-texture-cube.md  REQ-004-fps-display.md  REQ-005-multiple-cubes.md  REQ-008-lighting.md
docs/reviews/: REVIEW-001.md
docs/tests/: TEST-001.md
include/core/: Application.h  Camera.h  Frustum.h  SceneSerializer.h
include/light/: Light.h  LightManager.h
include/lighting/: Light.h  LightManager.h  ShadowMapper.h
include/mesh/: Material.h  Mesh.h  MeshUtils.h  ModelLoader.h  Texture.h  Vertex.h
include/particles/: Particle.h  ParticleRenderer.h
include/shader/: Shader.h
include/skybox/: Skybox.h
resources/: README.md
resources/shaders/: light_source.fs  lighting.fs  lighting.vs  mesh.fs  mesh.vs  multi_light.fs  particle.fs  particle.vs  phong.fs  phong.vs  phong_lighting.fs  phong_lighting.vs  shadow_depth.fs  shadow_depth.vs  skybox.fs  skybox.vs  texture.fs  texture_simple.fs
src/: main.cpp
src/core/: Application.cpp  Camera.cpp  Frustum.cpp  SceneSerializer.cpp
src/light/: Light.cpp  LightManager.cpp
src/lighting/: Light.cpp  LightManager.cpp  ShadowMapper.cpp
src/mesh/: Material.cpp  Mesh.cpp  MeshUtils.cpp  ModelLoader.cpp  Texture.cpp
src/particles/: Particle.cpp  ParticleRenderer.cpp
src/shader/: Shader.cpp
src/skybox/: Skybox.cpp
tests/: test_camera.cpp  test_light.cpp  test_light_manager.cpp  test_material.cpp  test_mesh.cpp  test_mesh_extended.cpp  test_phong_light.cpp  test_shader.cpp  test_vertex.cpp
